# Robotics2.0

./: README.md
pendulum_sim/: package.xml  setup.cfg  setup.py
pendulum_sim/config/: controllers.yaml
pendulum_sim/launch/: full_pipeline.launch.py  isaac_ros_vision.launch.py  pendulum_sim.launch.py
pendulum_sim/pendulum_sim/: bob_detector.py  pendulum_oscillator.py  pendulum_simulator.py
pendulum_sim/urdf/: pendulum.urdf
pendulum_sim/worlds/: pendulum.sdf
